--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -21,6 +21,12 @@ jobs:
       run: |
         npm install
         npm test
+      env:
+        URL_TO_TEST: ${{ secrets.URL_TO_TEST }}
+        CI: true
+    - name: npm contract test
+      run: |
+        npm run test-contract:get
       env:
         URL_TO_TEST: ${{ secrets.URL_TO_TEST }}
         CI: true
